chore: migrate http handlers to annotation based api
